Fix alignment and names of dialogs

--- a/public/style.css
+++ b/public/style.css
@@ -236,6 +236,10 @@ textarea:focus {
   line-height: 100%;
 }
 
+.outputStoreActionEditFormRow {
+  display: flex;
+}
+
 .outputActionsCol {
 
 }
